<resources>
    <string name="app_name">My Sky Hub App</string>

    <string name="ssid_name">SSID </string>
    <string name="bv_getConnet"> MyHub Details </string>
    <string name="wifiPass_text">Wireless Pass</string>
    <string name="model_text">Model</string>
    <string name="firmware_text">Firmware</string>
    <string name="dslDriver_text">DSL Driver</string>
    <string name="manufacturer_text">Manufacturer</string>
    <string name="US_text">Upstream Speed</string>
    <string name="DS_text">Downstream Speed</string>
    <string name="bv_start">  START SCANNING MY NETWORK </string>
    <string name="deviceSSID_Text">  SSID </string>
    <string name="deviceBSSID_Text">  BSSID </string>
    <string name="deviceMAC_Text">  MAC Address </string>
    <string name="deviceFreq_Text">  Frequency </string>
    <string name="deviceLinkSpeed_Text">  Link Speed </string>
    <string name="deviceIP_Text">  IP Address </string>
    <string name="deviceNetId_Text">  Network ID </string>
    <string name="deviceChannel_Text">  Channel </string>
    <string name="deviceRSSI_Text">  Signal Strength (RSSI)</string>
    <string name="bv_getDeviceData"> handset details </string>
    <string name="bv_getGraphs">  \n            Wi-Fi Analyzer </string>


</resources>
