<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.skyaccessteam.homeapp4.SecondActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <View
            android:id="@+id/rectangle_at_the_top"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"

            android:visibility="visible" />

        <TextView
            android:id="@+id/subtittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/rectangle_at_the_top"
            android:layout_marginBottom="11dp"
            android:layout_centerHorizontal="true"
            android:textColor="#0D47A1"
            android:text="My Hub Details"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/manufacturer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color1"
            android:layout_marginTop="20dp"
            android:text="@string/manufacturer_text"
            android:textSize="20dp"
            android:layout_below="@+id/subtittle"
            android:layout_marginLeft="20dp"
            />

        <TextView
            android:id="@+id/manufacturer_Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="     "
            android:textColor="@color/color1"
            android:textSize="16dp"
            android:layout_alignBaseline="@id/manufacturer_text"
            android:layout_marginLeft="240dp"
             />

        <TextView
            android:id="@+id/tv_SSID"
            android:layout_width="wrap_content"
            android:textColor="@color/color1"
            android:layout_height="wrap_content"
            android:layout_below="@+id/manufacturer_text"
            android:layout_marginTop="8dp"
            android:layout_alignLeft="@id/manufacturer_text"
            android:text="@string/ssid_name"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_ssid_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color1"
            android:textSize="16dp"
            android:hint="       "
            android:layout_alignBaseline="@+id/tv_SSID"
            android:layout_alignRight="@id/manufacturer_Value"
             />

        <WebView
            android:id="@+id/wv_dummy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_SSID"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbars="vertical"
            android:visibility="gone" />

        <WebView
            android:id="@+id/wv_dummy2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_SSID"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbars="vertical"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_w_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_SSID"
            android:layout_marginTop="8dp"
            android:layout_alignLeft="@id/manufacturer_text"
            android:textColor="@color/color1"
            android:text="@string/wifiPass_text"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/wifiPass_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color1"
            android:hint="     "
            android:layout_alignBaseline="@id/tv_w_pwd"
            android:layout_alignRight="@id/manufacturer_Value"
            android:textSize="16dp"
            />

        <TextView
            android:id="@+id/model_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_w_pwd"
            android:layout_marginTop="8dp"
            android:text="@string/model_text"
            android:layout_alignLeft="@id/manufacturer_text"
            android:textColor="@color/color1"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/model_Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color1"
            android:layout_alignBaseline="@+id/model_text"
            android:hint="     "
            android:layout_alignRight="@id/manufacturer_Value"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/firmware_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/manufacturer_text"
            android:layout_below="@+id/model_text"
            android:layout_marginTop="8dp"
            android:text="@string/firmware_text"
            android:textColor="@color/color1"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/firmware_Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="       "
            android:textSize="16dp"
            android:textColor="@color/color1"
            android:layout_alignBaseline="@id/firmware_text"
            android:layout_alignRight="@id/manufacturer_Value"
             />

        <TextView
            android:id="@+id/dslDriver_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/firmware_text"
            android:layout_below="@+id/firmware_text"
            android:layout_marginTop="8dp"
            android:text="@string/dslDriver_text"
            android:textColor="@color/color1"
            android:visibility="gone"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/dslDriver_Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:hint="     "
            android:textSize="16dp"
            android:textColor="@color/color1"
            android:layout_alignBaseline="@+id/dslDriver_text"
            android:layout_alignRight="@id/manufacturer_Value" />

        <TextView
            android:id="@+id/US_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color1"
            android:text="@string/US_text"
            android:textSize="20dp"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/dslDriver_text"
            android:layout_alignLeft="@id/manufacturer_text"
             />

        <TextView
            android:id="@+id/US_Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="     "
            android:textSize="16dp"
            android:layout_alignBaseline="@id/US_text"
            android:textColor="@color/color1"
            android:layout_alignRight="@id/manufacturer_Value"
            />

        <TextView
            android:id="@+id/DS_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color1"
            android:layout_marginTop="8dp"
            android:text="@string/DS_text"
            android:textSize="20dp"
            android:layout_below="@id/US_text"
            android:layout_alignLeft="@id/manufacturer_text"
             />

        <TextView
            android:id="@+id/DS_Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="     "
            android:textSize="16dp"
            android:textColor="@color/color1"
            android:layout_alignBaseline="@+id/DS_text"
            android:layout_alignRight="@id/manufacturer_Value" />





        <ImageView
            android:id="@+id/iv_Hub3"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_height="110dp"
            android:layout_below="@id/DS_text"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="0dp"
            android:visibility="invisible"
            app:srcCompat="@drawable/hub3_v2" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/myProgressBar2"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_below="@id/iv_Hub3"
            android:indeterminate="true"
            android:visibility="visible"
            android:max="100"
            android:layout_marginTop="-10dp"
            android:layout_centerHorizontal="true"
            android:minHeight="10dp"
            android:minWidth="200dp"
            android:progress="1"
            />

        <Button
            android:id="@+id/bv_getContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_Hub3"
            android:layout_marginLeft="40dp"
            android:visibility="gone"
            android:layout_alignTop="@id/rectangle_at_the_bottom"
            android:layout_marginBottom="0dp"
            android:text="@string/bv_getConnet" />

        <Button
            android:id="@+id/bv_getDeviceData"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/bv_getContent"
            android:textSize="12dp"
            android:visibility="gone"
            android:layout_marginLeft="180dp"
            android:layout_width="170dp"
            android:text="@string/bv_getDeviceData" />

        <Button
            android:id="@+id/bv_getGraphs"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:layout_alignBottom="@id/rectangle_at_the_bottom"
            android:text="@string/bv_getGraphs"
            android:layout_marginBottom="30dp"
            android:textSize="18dp" />

        <View
            android:id="@+id/rectangle_at_the_bottom"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:visibility="visible" />



    </RelativeLayout>




</android.support.constraint.ConstraintLayout>
